<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_OutfeedConveyorErrors" Id="{86f3ab67-bacd-49e7-a4ea-0913c73f913a}">
    <Declaration><![CDATA[TYPE ST_OutfeedConveyorErrors :
STRUCT
	NCAxisError					: ST_NcAxis_Errors;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>