<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_OutfeedConveyorMachPar" Id="{83d35d86-a911-4b17-9794-36fec88beb43}">
    <Declaration><![CDATA[TYPE ST_OutfeedConveyorMachPar :
STRUCT
	VelocityManual						: LREAL;
	VelocityAuto						: LREAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>