<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_OutfeedConveyorProdPar" Id="{48e9cee6-16c1-4d93-b4d8-a4cd00d8451d}">
    <Declaration><![CDATA[TYPE ST_OutfeedConveyorProdPar :
STRUCT
	Par1: REAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>