<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_OutfeedConveyorSysPar" Id="{f2a45318-b50c-4869-ab8f-92726069d947}">
    <Declaration><![CDATA[TYPE ST_OutfeedConveyorSysPar :
STRUCT
	Belt					: ST_NcAxis_SysPar;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>